# stepit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: stepit_utils.cmake
config/: environment.sh
config/joystick/: beitong.yml
config/robot/: aliengo.yml  b1.yml  b2.yml  dummy.yml  g1_15dof.yml  g1_23dof.yml  g1_29dof.yml  go1.yml  go2.yml  lite3.yml  x30.yml  x30u.yml
include/stepit/: agent.h  communication.h  control_input.h  logging.h  macro.h  plugin.h  policy.h  publisher.h  registry.h  robot.h  spin.h  utils.h
package/ros/stepit_ros/: CMakeLists.txt  package.xml
package/ros/stepit_ros_msgs/: CMakeLists.txt  package.xml
package/ros2/stepit_ros2/: package.xml
package/ros2/stepit_ros2_msgs/: CMakeLists.txt  package.xml
plugin/control_console/: CMakeLists.txt  README.md
plugin/control_console/src/: control_console.cpp
plugin/csv_publisher/: CMakeLists.txt  README.md
plugin/csv_publisher/src/: csv_publisher.cpp
plugin/debugging_helper/: CMakeLists.txt  README.md
plugin/debugging_helper/src/: dummy_control.cpp  dummy_robot.cpp  entry.cpp  exit_spin.cpp
plugin/joystick_base/: CMakeLists.txt  README.md
plugin/joystick_base/src/: joystick.cpp  keymap.cpp
plugin/joystick_udp/: CMakeLists.txt  README.md
plugin/joystick_udp/src/: joystick_udp.cpp
plugin/joystick_usb/: CMakeLists.txt  README.md
plugin/joystick_usb/include/stepit/joystick/: usb.h
plugin/joystick_usb/src/: usb.cpp
plugin/nnrt_ascendcl/: CMakeLists.txt  README.md
plugin/nnrt_ascendcl/src/: ascendcl.cpp
plugin/nnrt_base/: CMakeLists.txt  README.md
plugin/nnrt_base/app/: nnrt_test.cpp
plugin/nnrt_base/src/: nnrt.cpp
plugin/nnrt_base/template/: network.yml
plugin/nnrt_onnxruntime/: CMakeLists.txt  README.md
plugin/nnrt_onnxruntime/src/: onnxruntime.cpp
plugin/nnrt_rknnrt/: CMakeLists.txt  README.md
plugin/nnrt_rknnrt/src/: rknnrt.cpp
plugin/nnrt_tensorrt/: CMakeLists.txt  README.md
plugin/nnrt_tensorrt/include/stepit/nnrt/: tensorrt.h
plugin/nnrt_tensorrt/src/: tensorrt.cpp
plugin/policy_neuro/: CMakeLists.txt  README.md
plugin/policy_neuro/src/: action_source.cpp  actuator.cpp  cmd_posture_source.cpp  cmd_vel_source.cpp  field.cpp  field_assembler.cpp  field_scaling.cpp  heightmap_source.cpp  joint_reorder.cpp  joint_reordering.cpp  neuro_field_source.cpp  neuro_policy.cpp  proprioceptor.cpp  roll_pitch_source.cpp  subscriber_action.cpp
plugin/policy_neuro/template/: action_filter.yml  actor.yml  cmd_posture.yml  cmd_vel.yml  field_assembler.yml  heightmap.yml  joint_order.yml  policy.yml
plugin/policy_neuro_ros/: CMakeLists.txt  README.md  package.xml
plugin/policy_neuro_ros/src/: cmd_posture_subscriber.cpp  cmd_vel_subscriber.cpp  field_subscriber.cpp  heightmap_subscriber.cpp
plugin/policy_neuro_ros/template/: cmd_posture.yml  cmd_vel.yml  field_subscriber.yml  heightmap.yml
plugin/policy_neuro_ros2/: CMakeLists.txt  README.md  package.xml
plugin/policy_neuro_ros2/src/: cmd_posture_subscriber2.cpp  cmd_vel_subscriber2.cpp  field_subscriber2.cpp  heightmap_subscriber2.cpp
plugin/policy_neuro_ros2/template/: cmd_posture.yml  cmd_vel.yml  field_subscriber.yml  heightmap.yml
plugin/robot_deeprobotics_lite3/: CMakeLists.txt  README.md
plugin/robot_deeprobotics_lite3/src/: deeprobotics_lite3.cpp
plugin/robot_deeprobotics_x30/: CMakeLists.txt  README.md
plugin/robot_unitree/: CMakeLists.txt  README.md
plugin/robot_unitree2/: CMakeLists.txt  README.md
plugin/robot_unitree2_ros2/: CMakeLists.txt  README.md  package.xml
plugin/robot_unitree2_ros2/include/stepit/robot/unitree2_ros2/: joystick.h  quadruped.h
plugin/robot_unitree2_ros2/src/: joystick.cpp  quadruped.cpp
plugin/robot_unitree_aliengo/: CMakeLists.txt
plugin/robot_unitree_b1/: CMakeLists.txt
plugin/robot_unitree_go1/: CMakeLists.txt
plugin/ros2_base/: CMakeLists.txt  README.md  package.xml
plugin/ros2_base/src/: node.cpp  (+5 more)
plugin/ros_base/: CMakeLists.txt  README.md  package.xml
src/stepit/: agent.cpp  builtin.cpp  communication.cpp  control_input.cpp  logging.cpp  plugin.cpp  publisher.cpp  registry.cpp  robot.cpp  spin.cpp
src/stepit_app/: main.cpp  rotation_transform.cpp
(+65 files in other folders)
