<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stepit_ros2</name>
  <version>0.0.0</version>
  <description>The ROS2 package for stepit</description>
  <maintainer email="jewel@zju.edu.cn">Chengrui Zhu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>stepit_ros2_msgs</depend>
  <depend>unitree_go</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
